# car_price-prediction

./: README.md  compose.yaml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: docker-image.yml
car_pred/: Dockerfile  app.py  compose.yaml  gradio_app.py  main.py  model.py
car_pred/flagged/: log.csv
car_pred/noteboks/: import_data.ipynb  main.ipynb
car_scraper/: data.csv  requirements.txt  scrapy.cfg
car_scraper/car_scraper/: items.py  pipelines.py  settings.py
car_scraper/car_scraper/spiders/: carScraper.py
noteboks/data/: car_data.csv
