[tool.poetry]
name = "car-pred"
version = "0.1.0"
description = ""
authors = ["Duks31 <chidubemjan31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
uvicorn = "^0.30.3"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
