[tool.poetry]
name = "car-pred"
version = "0.1.0"
description = "Car price Predictor"
authors = ["Duks31 <chidubemjan31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.3"
requests = "^2.32.3"
gradio = "^4.39.0"
joblib = "^1.4.2"
scikit-learn = "^1.5.1"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
